WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82648
Images that reload via media queries don't paint when device scale factor changes
https://bugs.webkit.org/show_bug.cgi?id=82648
Summary
Images that reload via media queries don't paint when device scale factor cha...
Anders Carlsson
Reported
2012-03-29 13:24:18 PDT
Images that reload via media queries don't paint when device scale factor changes
Attachments
Patch
(2.26 KB, patch)
2012-03-29 13:28 PDT
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-29 13:28:08 PDT
Created
attachment 134654
[details]
Patch
Anders Carlsson
Comment 2
2012-03-29 14:13:18 PDT
Committed
r112573
: <
http://trac.webkit.org/changeset/112573
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug