Images that reload via media queries don't paint when device scale factor changes https://bugs.webkit.org/show_bug.cgi?id=82648 <rdar://problem/11143637>

Reviewed by Beth Dakin.

Commit scale factor changes before dirty rect changes, since setting the scale factor
can lead to more rects being dirtied when using the tile cache.

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::commitLayerChangesBeforeSublayers):

Canonical link: https://commits.webkit.org/99981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112573 268f45cc-cd09-0410-ab3c-d52691b4dbfc